color contrast issues

--- a/ckan/public/base/less/dataset.less
+++ b/ckan/public/base/less/dataset.less
@@ -185,7 +185,7 @@
 
 .label[data-format=xml],
 .label[data-format*=xml] {
-  background-color: #00A6E5;
+  background-color: #007eac;
 }
 
 .label[data-format=text],
@@ -210,7 +210,7 @@
 
 .label[data-format=api],
 .label[data-format*=api] {
-  background-color: #0099F0;
+  background-color: #0070b1;
   text-transform: uppercase;
 }
 
