--- a/ckan/public/base/less/footer.less
+++ b/ckan/public/base/less/footer.less
@@ -11,7 +11,7 @@
 }
 
 .site-footer a {
-  color: #f28433;
+  color: #ffa31a;
 }
 
 .footer-links ul li {
