--- a/ckan/public/base/less/layout.less
+++ b/ckan/public/base/less/layout.less
@@ -160,7 +160,7 @@
   h2 {
     font-size: 2.5em;
     font-weight: 600;
-    color:#19A4DE;
+    color:#007eac;
     background-color: #fff;
     margin-top: 0;
     padding:1em;
@@ -365,7 +365,7 @@
     margin:1em;
     display: inline-flex;
     display: -webkit-inline-flex; /* Safari */
-    background-color: #00A6E5;
+    background-color: #007eac;
     color:#fff;
     text-align: center;
 
@@ -384,7 +384,7 @@
     }
 
     .module-heading {
-      background-color: #00A6E5;
+      background-color: #007eac;
       h3 {
         a {
             color:#fff;
