--- a/ckan/public/base/less/masthead.less
+++ b/ckan/public/base/less/masthead.less
@@ -4,7 +4,7 @@
   .clearfix();
   min-height: 30px;
   color: @mastheadTextColor;
-  background-color: #00A6E5;
+  background-color: #007eac;
   .account {
     float: right;
     ul {
